# recipehub-back

./: .dockerignore  DOCKER_SETUP.md  Dockerfile  FRONTEND_SPECIFICATIONS.md  README.md  docker-compose.yml  init_db.py  main.py  pyproject.toml  recipehub.db  requirements.txt  seed.py
app/: database.py  security.py
app/auth/: auth_controller.py  auth_service.py
app/recipe/: recipe_controller.py  recipe_model.py  recipe_repository.py  recipe_service.py
app/roles/: role_controller.py  role_model.py  role_repository.py
app/user/: user_controller.py  user_model.py  user_repository.py  user_service.py
app/users/: user_controller.py  user_model.py  user_repository.py  user_service.py
tests/: test_auth_controller.py  test_recipe_controller.py  test_role_controller.py  test_user_controller.py
